Add OG image, update footer with 4 columns + social links, fix anchor IDs
- Created images/og-default.png (1200x630) with teal gradient branding
- Added og:image meta tags to all HTML pages
- Updated footer: Hakkımızda, Bölümler, Araçlar, İletişim columns
- Added social media links (Instagram, Twitter, email)
- Added TYZD partnership link
- Fixed anchor IDs in araclar.html (#bmi, #kalori, #bel-boy)
- hakkimizda.html already had #iletisim and #kurul IDs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
  <meta name="keywords" content="sağlıklı yaşam, kilo verme, diyet, egzersiz,GLP-1, obezite tedavisi, uzun yaşam">
  <meta name="author" content="UzunYaşa">
  <meta property="og:title" content="UzunYaşa | Bilimle Daha Uzun, Daha İyi Yaşam">
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta property="og:description" content="Türkiye uzun yaşasın diye. Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <meta property="og:type" content="website">
  <meta property="og:locale" content="tr_TR">
@@ -2622,21 +2623,22 @@
  </div>
  </div>
  <div class="footer-column">
- <h4>İçerik</h4>
+ <h4>Hakkımızda</h4>
  <ul class="footer-links">
- <li><a href="pages/hikayeler.html">Hikayeler</a></li>
- <li><a href="pages/rehberler.html">Rehberler</a></li>
- <li><a href="pages/blog.html">Blog</a></li>
- <li><a href="pages/bilim.html">Bilim</a></li>
+ <li><a href="pages/hakkimizda.html">Misyonumuz</a></li>
+ <li><a href="pages/hakkimizda.html#kurul">Danışma Kurulu</a></li>
+ <li><a href="pages/editoryal-politika.html">Editöryal Politika</a></li>
+ <li><a href="https://tyzd.org" target="_blank" rel="noopener">TYZD Ortaklığı ↗</a></li>
  </ul>
  </div>
  <div class="footer-column">
- <h4>Keşfet</h4>
+ <h4>Bölümler</h4>
  <ul class="footer-links">
  <li><a href="pages/beslenme.html">Beslenme</a></li>
  <li><a href="pages/egzersiz.html">Egzersiz</a></li>
  <li><a href="pages/tedavi.html">Tedaviler</a></li>
  <li><a href="pages/uyku-stres.html">Zihin & Davranış</a></li>
+ <li><a href="pages/blog.html">Blog</a></li>
  </ul>
  </div>
  <div class="footer-column">
@@ -2644,28 +2646,33 @@
  <ul class="footer-links">
  <li><a href="pages/araclar.html#bmi">BMI Hesapla</a></li>
  <li><a href="pages/araclar.html#kalori">Kalori Hesapla</a></li>
+ <li><a href="pages/araclar.html#bel-boy">Bel-Boy Oranı</a></li>
  <li><a href="pages/test.html">Tedavi Testi</a></li>
- <li><a href="pages/araclar.html#bel-boy">Vücut Oranları</a></li>
  </ul>
  </div>
  <div class="footer-column">
- <h4>Hakkımızda</h4>
+ <h4>İletişim</h4>
  <ul class="footer-links">
- <li><a href="pages/hakkimizda.html">Misyonumuz</a></li>
- <li><a href="pages/hakkimizda.html#kurul">Danışma Kurulu</a></li>
- <li><a href="https://tyzd.org" target="_blank">Tıpta Yapay Zeka Derneği</a></li>
- <li><a href="pages/hakkimizda.html#iletisim">İletişim</a></li>
+ <li><a href="mailto:info@uzunyasa.com">info@uzunyasa.com</a></li>
+ <li><a href="https://instagram.com/uzunyasaorg" target="_blank" rel="noopener">Instagram @uzunyasaorg</a></li>
+ <li><a href="https://twitter.com/uzunyasaorg" target="_blank" rel="noopener">Twitter @uzunyasaorg</a></li>
+ <li><a href="pages/hakkimizda.html#iletisim">İletişim Formu</a></li>
  </ul>
  </div>
  </div>
  <div class="footer-bottom">
  <p class="footer-copyright">© 2026 UzunYaşa. Tüm hakları saklıdır.</p>
- <!-- Sosyal medya hesapları açıldığında aktif edilecek
  <div class="footer-social">
- <a href="#" title="Instagram">...</a>
- <a href="#" title="YouTube">...</a>
+ <a href="https://instagram.com/uzunyasaorg" target="_blank" title="Instagram">
+ <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+ </a>
+ <a href="https://twitter.com/uzunyasaorg" target="_blank" title="Twitter">
+ <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+ </a>
+ <a href="mailto:info@uzunyasa.com" title="E-posta">
+ <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+ </a>
  </div>
- -->
  <p class="footer-org">
  UzunYaşa, <a href="https://tyzd.org" target="_blank" rel="noopener">Tıpta Yapay Zeka Derneği</a> girişimidir. Kâr amacı gütmemektedir.
  </p>
