--- a/pages/beslenme/bana-ne-uygun.html
+++ b/pages/beslenme/bana-ne-uygun.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Hedeflerinize, yaşam tarzınıza ve sağlık durumunuza göre size en uygun beslenme yaklaşımını bulun. Akdeniz diyeti, düşük karbonhidrat, aralıklı oruç ve daha fazlası.">
  <link rel="canonical" href="https://uzunyasa.com/pages/beslenme/bana-ne-uygun.html">
  <meta property="og:title" content="Bana Ne Uygun? Kişiselleştirilmiş Beslenme Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Hedeflerinize göre size en uygun beslenme yaklaşımını bulun. Bilimsel karşılaştırmalı rehber.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/beslenme/bana-ne-uygun.html">
