--- a/pages/beslenme/bmi-hesaplayici.html
+++ b/pages/beslenme/bmi-hesaplayici.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Ücretsiz BMI hesaplayıcı ile vücut kitle indeksinizi hesaplayın. BMI'nin anlamı, sınırlamaları, bel çevresi ölçümü ve Türkiye'ye özel sağlık risk kategorileri.">
  <link rel="canonical" href="https://uzunyasa.com/pages/beslenme/bmi-hesaplayici.html">
  <meta property="og:title" content="BMI Hesaplayıcı — Vücut Kitle İndeksi Hesaplama | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Ücretsiz BMI hesaplayıcı. BMI'nin anlamı, sınırlamaları ve Türkiye'ye özel sağlık bilgileri.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/beslenme/bmi-hesaplayici.html">
