--- a/pages/beslenme/kalori-hesaplayici.html
+++ b/pages/beslenme/kalori-hesaplayici.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Günlük kalori ihtiyacınızı (TDEE) hesaplayın. Mifflin-St Jeor formülü ile bazal metabolizma hızı, makrobesin dağılımı ve kalori açığı rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/beslenme/kalori-hesaplayici.html">
  <meta property="og:title" content="Kalori Hesaplayıcı — Günlük Kalori İhtiyacı (TDEE) | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Günlük kalori ihtiyacınızı hesaplayın. TDEE, bazal metabolizma ve makrobesin dağılımı rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/beslenme/kalori-hesaplayici.html">
