--- a/pages/ecem-app.html
+++ b/pages/ecem-app.html
@@ -15,6 +15,7 @@
  <meta name="apple-mobile-web-app-status-bar-style" content="default">
  <meta name="theme-color" content="#E8963E">
  <title>Ecem - AI Diyetisyen</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <link rel="manifest" href="../manifest.json">
  <link rel="apple-touch-icon" href="../images/ecem-icon.png">
  <link rel="preconnect" href="https://fonts.googleapis.com">
