--- a/pages/editoryal-politika.html
+++ b/pages/editoryal-politika.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Editoryal Politikamız | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="UzunYaşa editoryal politikası: İçeriklerimiz nasıl oluşturulur, incelenir ve güncellenir. Bağımsızlık ilkemiz ve kaynak politikamız.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +20,7 @@
  <link rel="stylesheet" href="../styles/main.css">
  <style>
  .ep-hero {
- background: linear-gradient(135deg, #195157 0%, #0D7377 100%);
+ background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(13,115,119,0.85)), url('https://images.unsplash.com/photo-1532938911079-1b06ac7ceec7?w=1400&q=80') center/cover;
  padding: 8rem 2rem 4rem;
  text-align: center;
  color: white;
