--- a/pages/egzersiz/esneklik-mobilite.html
+++ b/pages/egzersiz/esneklik-mobilite.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Yoga, pilates, stretching rutinleri ile eklem sağlığınızı koruyun. Hareket kalitesi, sabah rutinleri, esneklik testleri ve bilimsel kanıtlar.">
  <link rel="canonical" href="https://uzunyasa.com/pages/egzersiz/esneklik-mobilite.html">
  <meta property="og:title" content="Esneklik & Mobilite: Yoga, Pilates ve Germe Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Yoga, pilates, stretching rutinleri ile eklem sağlığınızı koruyun. Bilimsel kanıtlarla desteklenen rehber.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/egzersiz/esneklik-mobilite.html">
