--- a/pages/egzersiz/grup-egzersizleri.html
+++ b/pages/egzersiz/grup-egzersizleri.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Grup egzersizi türleri, sosyal fitness toplulukları, sınıf seçimi, motivasyon stratejileri ve topluluk bulma rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/egzersiz/grup-egzersizleri.html">
  <meta property="og:title" content="Grup Egzersizleri: Sosyal Fitness ve Motivasyon Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Grup egzersizi türleri, sosyal fitness toplulukları ve motivasyon stratejileri rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/egzersiz/grup-egzersizleri.html">
