--- a/pages/egzersiz/kardiyovaskular.html
+++ b/pages/egzersiz/kardiyovaskular.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Yürüyüş, koşu, bisiklet ve yüzme ile kalp sağlığınızı koruyun. Yağ yakım bölgeleri, başlangıç planları ve bilimsel kanıtlarla desteklenen kardio rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/egzersiz/kardiyovaskular.html">
  <meta property="og:title" content="Kardiyovasküler Egzersiz: Kalp Sağlığı İçin Eksiksiz Rehber | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Yürüyüş, koşu, bisiklet ve yüzme ile kalp sağlığınızı koruyun. Bilimsel kanıtlarla desteklenen kardio rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/egzersiz/kardiyovaskular.html">
