--- a/pages/egzersiz/kuvvet-antrenman.html
+++ b/pages/egzersiz/kuvvet-antrenman.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Direnç antrenmanı ile kas kütlesi kazanın, kemik yoğunluğunu artırın ve metabolizmanızı hızlandırın. Başlangıç ve orta seviye programlar, form rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/egzersiz/kuvvet-antrenman.html">
  <meta property="og:title" content="Kuvvet Antrenmanı: Kas, Kemik ve Metabolizma Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Direnç antrenmanı ile kas kütlesi kazanın, kemik yoğunluğunu artırın ve metabolizmanızı hızlandırın.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/egzersiz/kuvvet-antrenman.html">
