--- a/pages/istatistikler.html
+++ b/pages/istatistikler.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Türkiye'de obezite oranları, bölgesel dağılım, cinsiyet ve yaş analizi. TÜİK, WHO ve OECD verilerine dayalı güncel istatistikler.">
 <link rel="canonical" href="https://uzunyasa.com/pages/istatistikler.html">
 <meta property="og:title" content="Türkiye Obezite İstatistikleri | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../images/og-default.png">
 <meta property="og:description" content="Verilerle Türkiye'de obezite: oranlar, bölgesel dağılım, uluslararası karşılaştırma.">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="tr_TR">
@@ -21,7 +22,7 @@
 :root{--primary:#0D7377;--primary-dark:#195157;--accent:#E8963E;--bg:#f8fafa;--card:#fff;--text:#1a2e35;--text-light:#5a7a84}
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:'Inter',sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
-.page-header{background:linear-gradient(135deg,var(--primary-dark),var(--primary));color:#fff;text-align:center;padding:4rem 1.5rem 3rem}
+.page-header{background:linear-gradient(135deg,rgba(25,81,87,0.9),rgba(13,115,119,0.85)),url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=1400&q=80') center/cover;color:#fff;text-align:center;padding:4rem 1.5rem 3rem}
 .page-header h1{font-size:2.2rem;font-weight:800;margin-bottom:.5rem}
 .page-header p{opacity:.9;max-width:700px;margin:0 auto;font-size:1.05rem}
 .container{max-width:900px;margin:-2rem auto 3rem;padding:0 1rem}
