--- a/pages/raporum.html
+++ b/pages/raporum.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Kişisel sağlık profilinizi oluşturun. BMI, günlük kalori ihtiyacı, beslenme ve egzersiz önerileri içeren detaylı raporunuzu alın.">
 <link rel="canonical" href="https://uzunyasa.com/pages/raporum.html">
 <meta property="og:title" content="Kişisel Sağlık Profilim | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../images/og-default.png">
 <meta property="og:description" content="BMI, kalori ve kişisel sağlık raporunuzu oluşturun.">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="tr_TR">
