--- a/pages/rehberler/evde-egzersiz.html
+++ b/pages/rehberler/evde-egzersiz.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Evde Egzersiz Başlangıç Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="Ekipmansız, evde yapılabilecek etkili antrenmanlar. Yeni başlayanlar için 4 haftalık program.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
