--- a/pages/rehberler/tip2-diyabet.html
+++ b/pages/rehberler/tip2-diyabet.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Tip 2 Diyabet Önleme Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="Pre-diyabet veya risk altındaysanız: kan şekerini dengeleme, insülin direncini azaltma stratejileri.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
