--- a/pages/tedavi/ameliyat-oncesi-hazirlik.html
+++ b/pages/tedavi/ameliyat-oncesi-hazirlik.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Bariatrik cerrahi öncesi diyet, tetkikler, psikolojik değerlendirme, zaman çizelgesi ve ameliyata hazırlık süreci hakkında kapsamlı rehber.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/ameliyat-oncesi-hazirlik.html">
  <meta property="og:title" content="Bariatrik Ameliyat Öncesi Hazırlık Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Bariatrik cerrahi öncesi diyet, tetkikler, psikolojik değerlendirme ve hazırlık süreci rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/ameliyat-oncesi-hazirlik.html">
