--- a/pages/tedavi/davranissal-terapi.html
+++ b/pages/tedavi/davranissal-terapi.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Obezitede bilişsel davranışçı terapi (BDT), davranış değişikliği teknikleri, duygusal yeme, alışkanlık oluşturma ve Türkiye'de terapist bulma rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/davranissal-terapi.html">
  <meta property="og:title" content="Davranışsal Terapi ile Kilo Yönetimi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Obezitede bilişsel davranışçı terapi, davranış değişikliği teknikleri ve duygusal yeme ile başa çıkma rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/davranissal-terapi.html">
