--- a/pages/tedavi/gastrik-bypass.html
+++ b/pages/tedavi/gastrik-bypass.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Roux-en-Y gastrik bypass ameliyatı: etki mekanizması, diyabet remisyonu, sleeve ile farkları, riskler, tedavi süreci ve uzun vadeli sonuçlar.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/gastrik-bypass.html">
  <meta property="og:title" content="Gastrik Bypass (Roux-en-Y) Ameliyatı: Kapsamlı Rehber | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Gastrik bypass: diyabet remisyonunda altın standart. Etki mekanizması, başarı oranları, riskler ve uzun vadeli sonuçlar.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/gastrik-bypass.html">
