--- a/pages/tedavi/gastrik-sleeve.html
+++ b/pages/tedavi/gastrik-sleeve.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Tüp mide ameliyatı nedir, nasıl yapılır, kimler için uygun? Etki mekanizması, başarı oranları, riskler, iyileşme süreci ve uzun vadeli sonuçlar hakkında detaylı bilgi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/gastrik-sleeve.html">
  <meta property="og:title" content="Gastrik Sleeve (Tüp Mide) Ameliyatı: Kapsamlı Rehber | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Tüp mide ameliyatı hakkında bilmeniz gereken her şey: etki mekanizması, başarı oranları, riskler ve uzun vadeli sonuçlar.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/gastrik-sleeve.html">
