--- a/pages/tedavi/karsilastirma.html
+++ b/pages/tedavi/karsilastirma.html
@@ -16,6 +16,7 @@
  <meta name="keywords" content="GLP-1 karşılaştırma, ESG tedavi, bariatrik cerrahi, obezite tedavisi karşılaştırma, kilo verme yöntemleri">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/karsilastirma.html">
  <meta property="og:title" content="GLP-1 vs ESG vs Cerrahi — Tedavi Karşılaştırma Aracı | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Üç ana obezite tedavisini interaktif olarak karşılaştırın. Kanıta dayalı verilerle doğru seçimi yapın.">
  <meta property="og:type" content="article">
  <meta property="og:locale" content="tr_TR">
