--- a/pages/tedavi/kombinasyon-tedavileri.html
+++ b/pages/tedavi/kombinasyon-tedavileri.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Obezitede çok yönlü tedavi: ilaç, cerrahi ve yaşam tarzı değişikliğini birleştiren kişiselleştirilmiş tedavi planları.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/kombinasyon-tedavileri.html">
  <meta property="og:title" content="Kombinasyon Tedavileri: Çok Yönlü Obezite Tedavisi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Obezitede ilaç, cerrahi ve yaşam tarzı değişikliğini birleştiren kişiselleştirilmiş tedavi yaklaşımları.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/kombinasyon-tedavileri.html">
