--- a/pages/tedavi/naltrexone-bupropion.html
+++ b/pages/tedavi/naltrexone-bupropion.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Naltrexone/Bupropion kombinasyonu nasıl çalışır? Etkinlik, yan etkiler, kontrendikasyonlar ve diğer kilo verme ilaçlarıyla karşılaştırma.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/naltrexone-bupropion.html">
  <meta property="og:title" content="Naltrexone/Bupropion (Contrave): Kilo Yönetimi İlacı | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Naltrexone/Bupropion kombinasyonu: etkinlik, yan etkiler ve diğer kilo verme ilaçlarıyla karşılaştırma.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/naltrexone-bupropion.html">
