--- a/pages/tedavi/orlistat.html
+++ b/pages/tedavi/orlistat.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Orlistat nedir, nasıl çalışır? Dozaj, etkinlik, yan etkiler, beslenme gereklilikleri ve Türkiye'de erişim hakkında kapsamlı rehber.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/orlistat.html">
  <meta property="og:title" content="Orlistat (Xenical/Alli): Kilo Verme İlacı Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Orlistat nedir, nasıl çalışır? Dozaj, etkinlik, yan etkiler ve Türkiye'de erişim rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/orlistat.html">
