--- a/pages/tedavi/uzun-vadeli-takip.html
+++ b/pages/tedavi/uzun-vadeli-takip.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Bariatrik cerrahi ve obezite tedavisi sonrası uzun vadeli takip, beslenme eksiklikleri, kilo geri alımını önleme ve kontrol takvimi rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/uzun-vadeli-takip.html">
  <meta property="og:title" content="Tedavi Sonrası Uzun Vadeli Takip Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Obezite tedavisi sonrası uzun vadeli takip, beslenme eksiklikleri ve kilo geri alımını önleme rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/uzun-vadeli-takip.html">
