--- a/pages/tedavi/yan-etkiler-riskler.html
+++ b/pages/tedavi/yan-etkiler-riskler.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Bariatrik cerrahi ve ilaç tedavilerinin yan etkileri, risk değerlendirmesi, uyarı işaretleri ve komplikasyon yönetimi hakkında kapsamlı rehber.">
  <link rel="canonical" href="https://uzunyasa.com/pages/tedavi/yan-etkiler-riskler.html">
  <meta property="og:title" content="Obezite Tedavilerinde Yan Etkiler ve Riskler | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Cerrahi ve farmakolojik obezite tedavilerinin yan etkileri, risk faktörleri ve uyarı işaretleri rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/tedavi/yan-etkiler-riskler.html">
