--- a/pages/test-duygusal.html
+++ b/pages/test-duygusal.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Yiyeceklerle ilişkinizi keşfedin. 10 soruluk bilimsel test ile duygusal yeme alışkanlıklarınızı anlayın ve kişisel öneriler alın.">
 <link rel="canonical" href="https://uzunyasa.com/pages/test-duygusal.html">
 <meta property="og:title" content="Duygusal Yeme Testi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../images/og-default.png">
 <meta property="og:description" content="Yiyeceklerle ilişkinizi keşfedin. 10 soruluk test ile duygusal yeme alışkanlıklarınızı anlayın.">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="tr_TR">
