--- a/pages/uyku/ruya-ve-uyku-evreleri.html
+++ b/pages/uyku/ruya-ve-uyku-evreleri.html
@@ -15,6 +15,7 @@
  <meta name="description" content="REM ve NREM uyku evreleri, uyku döngüsü bilimi, rüyaların işlevi ve uyku evrelerinin sağlık üzerindeki etkileri hakkında kapsamlı, kanıta dayalı rehber.">
  <link rel="canonical" href="https://uzunyasa.com/pages/uyku/ruya-ve-uyku-evreleri.html">
  <meta property="og:title" content="Rüya ve Uyku Evreleri: REM, NREM ve Uyku Döngüsü Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="REM ve NREM uyku evreleri, uyku döngüsü bilimi ve rüyaların sağlık üzerindeki etkileri.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/uyku/ruya-ve-uyku-evreleri.html">
