--- a/pages/uyku/sirkadiyen-ritim.html
+++ b/pages/uyku/sirkadiyen-ritim.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Sirkadiyen ritim nedir, ışık maruziyeti, öğün zamanlaması, vardiyalı çalışma, jet lag, kronotip ve melatonin hakkında bilimsel rehber.">
  <link rel="canonical" href="https://uzunyasa.com/pages/uyku/sirkadiyen-ritim.html">
  <meta property="og:title" content="Sirkadiyen Ritim: Vücut Saatinizi Anlama Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Vücut saatinizi anlamak, ışık maruziyeti, kronotip ve jet lag yönetimi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/uyku/sirkadiyen-ritim.html">
