--- a/pages/uyku/uyku-bozukluklari.html
+++ b/pages/uyku/uyku-bozukluklari.html
@@ -15,6 +15,7 @@
  <meta name="description" content="İnsomni, uyku apnesi, huzursuz bacak sendromu ve narkolepsi hakkında kapsamlı rehber. Belirtiler, ne zaman doktora gidilmeli ve tedavi seçenekleri.">
  <link rel="canonical" href="https://uzunyasa.com/pages/uyku/uyku-bozukluklari.html">
  <meta property="og:title" content="Uyku Bozuklukları: Belirtiler, Tanı ve Tedavi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="İnsomni, uyku apnesi, huzursuz bacak sendromu ve narkolepsi rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/uyku/uyku-bozukluklari.html">
