--- a/pages/uyku/uyku-hijyeni.html
+++ b/pages/uyku/uyku-hijyeni.html
@@ -15,6 +15,7 @@
  <meta name="description" content="Yatak odası optimizasyonu, uyku rutinleri, sıcaklık, ışık, gürültü kontrolü ve bilimsel kanıtlarla desteklenen uyku hijyeni rehberi.">
  <link rel="canonical" href="https://uzunyasa.com/pages/uyku/uyku-hijyeni.html">
  <meta property="og:title" content="Uyku Hijyeni: Kaliteli Uyku İçin Eksiksiz Rehber | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="Yatak odası optimizasyonu, uyku rutinleri ve bilimsel kanıtlarla desteklenen uyku hijyeni rehberi.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/uyku/uyku-hijyeni.html">
