--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Sayfa Bulunamadı | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="robots" content="noindex">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
