--- a/pages/egzersiz/hiit-tabata.html
+++ b/pages/egzersiz/hiit-tabata.html
@@ -15,6 +15,7 @@
  <meta name="description" content="HIIT ve Tabata protokolleri, faydaları, örnek antrenmanlar, toparlanma stratejileri ve kimlerin kaçınması gerektiği. Bilimsel kanıtlarla desteklenen rehber.">
  <link rel="canonical" href="https://uzunyasa.com/pages/egzersiz/hiit-tabata.html">
  <meta property="og:title" content="HIIT & Tabata: Yüksek Yoğunluklu Aralıklı Antrenman Rehberi | UzunYaşa">
+    <meta property="og:image" content="https://uzunyasa.com/../../images/og-default.png">
  <meta property="og:description" content="HIIT ve Tabata protokolleri, örnek antrenmanlar ve bilimsel kanıtlarla desteklenen rehber.">
  <meta property="og:type" content="article">
  <meta property="og:url" content="https://uzunyasa.com/pages/egzersiz/hiit-tabata.html">
