--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Hakkımızda | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
     <meta name="description" content="Türkiye'nin bağımsız kilo yönetimi platformu. Obeziteyi yenin, daha uzun ve sağlıklı yaşayın.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
