--- a/pages/icerik-haritasi.html
+++ b/pages/icerik-haritasi.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>İçerik Haritası | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="UzunYaşa platformundaki tüm içeriklerin haritası. Beslenme, egzersiz, tedavi, uyku ve daha fazlası.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
