--- a/pages/preview-ai-experts.html
+++ b/pages/preview-ai-experts.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>AI Uzmanları — UzunYaşa Preview</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
  <style>
