--- a/pages/rehberler/50-yas-egzersiz.html
+++ b/pages/rehberler/50-yas-egzersiz.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>50 Yaş Üstü Egzersiz Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="50 yaş üstü için güvenli, etkili ve bilimsel egzersiz rehberi. Kas kaybını önleme, denge, esneklik ve haftalık program.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
