--- a/pages/rehberler/akdeniz-diyeti.html
+++ b/pages/rehberler/akdeniz-diyeti.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Akdeniz Diyeti Başlangıç Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="Dünyanın en sağlıklı beslenme tarzı Akdeniz diyeti: Ne yemeli, örnek menüler, alışveriş listesi ve bilimsel kanıtlar.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
