--- a/pages/rehberler/aralikli-oruc.html
+++ b/pages/rehberler/aralikli-oruc.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Aralıklı Oruç Başlangıç Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="16:8, 5:2 ve diğer aralıklı oruç yöntemleri. Kime uygun, nasıl başlanır, dikkat edilmesi gerekenler.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
