--- a/pages/rehberler/kalori-acigi.html
+++ b/pages/rehberler/kalori-acigi.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Kalori Açığı Oluşturma Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="Sağlıklı ve sürdürülebilir kalori açığı nasıl hesaplanır? Açlık hissetmeden kilo vermenin bilimsel yolları.">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
