--- a/pages/rehberler/plato-kirma.html
+++ b/pages/rehberler/plato-kirma.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Plato Kırma Rehberi | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="Kilo verirken takılıp kaldınız mı? Metabolizmayı hızlandırma ve plato dönemini aşma stratejileri.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
