--- a/pages/tedavi/endoskopik-prosedurler.html
+++ b/pages/tedavi/endoskopik-prosedurler.html
@@ -12,6 +12,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Endoskopik Obezite Prosedürleri (ESG, Balon) | UzunYaşa</title>
+    <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <meta name="description" content="Endoskopik sleeve gastrektomi (ESG), mide balonu ve diğer kesi gerektirmeyen obezite tedavileri hakkında bilgi.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
