Add Unsplash stock photo posters to video hero sections for fallback
- beslenme.html: healthy food poster image
- egzersiz.html: exercise/running poster image
- tedavi.html: medical/clinical poster image
- uyku-stres.html: sleep/wellness poster image
- bilim.html: science/research poster image
- hakkimizda.html: medical team poster image
- karsilastirma.html: surgical background image in CSS
- danisma-kurulu.html: medical research background image
- editoryal-politika.html: doctor consultation background image
- istatistikler.html: data/statistics background image
- kalori-hesaplayici.html: nutrition hero image
- araclar.html: medical tools hero image with overlay

--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -240,7 +240,7 @@
  </header>
 
  <section class="page-hero">
- <video class="page-hero-bg" autoplay muted loop playsinline>
+ <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=1400&q=80">
  <source src="../videos/background-5.mp4" type="video/mp4">
  </video>
  <div class="page-hero-overlay"></div>
