--- a/pages/beslenme.html
+++ b/pages/beslenme.html
@@ -40,7 +40,7 @@
 
  <!-- PAGE HERO -->
  <section class="page-hero">
- <video class="page-hero-bg" autoplay muted loop playsinline>
+ <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=1400&q=80">
  <source src="../videos/background-5.mp4" type="video/mp4">
  </video>
  <div class="page-hero-overlay"></div>
