--- a/pages/bilim.html
+++ b/pages/bilim.html
@@ -402,7 +402,7 @@
  </header>
 
  <section class="page-hero">
- <video class="page-hero-bg" autoplay muted loop playsinline>
+ <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?w=1400&q=80">
  <source src="../videos/background-2.mp4" type="video/mp4">
  </video>
  <div class="page-hero-overlay"></div>
