--- a/pages/tedavi.html
+++ b/pages/tedavi.html
@@ -230,7 +230,7 @@
  </header>
 
  <section class="page-hero">
- <video class="page-hero-bg" autoplay muted loop playsinline>
+ <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=1400&q=80">
  <source src="../videos/background-3.mp4" type="video/mp4">
  </video>
  <div class="page-hero-overlay"></div>
