--- a/pages/uyku-stres.html
+++ b/pages/uyku-stres.html
@@ -201,7 +201,7 @@
  </header>
 
  <section class="page-hero">
- <video class="page-hero-bg" autoplay muted loop playsinline>
+ <video class="page-hero-bg" autoplay muted loop playsinline poster="https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=1400&q=80">
  <source src="../videos/background-7.mp4" type="video/mp4">
  </video>
  <div class="page-hero-overlay"></div>
