--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -513,7 +513,7 @@
  .kurul-header h2 { font-size: 2rem; font-weight: 700; color: #195157; margin-bottom: 0.5rem; }
  .kurul-header p { color: #6b7280; max-width: 600px; margin: 0 auto; }
  .kurul-badge { display: inline-flex; align-items: center; gap: 8px; background: #f0fdf4; color: #065f46; padding: 8px 16px; border-radius: 100px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
- .kurul-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; }
+ .kurul-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; max-width: 1200px; margin: 0 auto; }
  .kurul-card { background: #fafafa; border: 1px solid #e5e7eb; border-radius: 16px; padding: 1.5rem; transition: all 0.3s; }
  .kurul-card:hover { transform: translateY(-4px); box-shadow: 0 12px 40px rgba(0,0,0,0.1); }
  .kurul-card-header { display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem; }
@@ -534,94 +534,121 @@
  </div>
 
  <div class="kurul-grid">
- <div class="kurul-card">
+ <div class="kurul-card" style="border: 2px solid #0D7377; background: linear-gradient(135deg, #f0fdfa, #ecfdf5);">
  <div class="kurul-card-header">
- <div class="kurul-avatar">CŞ</div>
- <div class="kurul-info">
- <h4>Doç. Dr. Cem Şimşek</h4>
- <span>Kurucu</span>
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/cem-simsek.svg" alt="CŞ" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Dr. Cem Şimşek</h4>
+     <span style="color:#0D7377;">Kurucu & Kurul Başkanı</span>
+   </div>
  </div>
- </div>
- <div class="kurul-title">Gastroenteroloji</div>
- <p class="kurul-desc">Bariatrik endoskopi, GLP-1 tedavileri ve obezite yönetimi. Harvard Medical School ileri eğitim.</p>
- <div class="kurul-affiliation">
- <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
- </div>
+ <div class="kurul-title">Gastroenteroloji / İç Hastalıkları</div>
+ <p class="kurul-desc">Bariatrik endoskopi, GLP-1 tedavileri ve obezite yönetimi.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
 
  <div class="kurul-card">
  <div class="kurul-card-header">
- <div class="kurul-avatar">TD</div>
- <div class="kurul-info">
- <h4>Prof. Dr. Tomris Durmaz</h4>
- <span>Danışman</span>
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/oguz-uyaroglu.svg" alt="OÜ" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Doç. Dr. Oğuz Uyaroğlu</h4>
+     <span>Danışman</span>
+   </div>
  </div>
- </div>
- <div class="kurul-title">Kardiyoloji</div>
- <p class="kurul-desc">Kalp damar hastalıkları, obezite ve kardiyovasküler risk yönetimi.</p>
- <div class="kurul-affiliation">
- <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
- </div>
+ <div class="kurul-title">İç Hastalıkları</div>
+ <p class="kurul-desc">Obezite komorbiditeleri, metabolik sendrom ve dahiliye yaklaşımları.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
 
  <div class="kurul-card">
  <div class="kurul-card-header">
- <div class="kurul-avatar">MG</div>
- <div class="kurul-info">
- <h4>Prof. Dr. Miyase Göksu</h4>
- <span>Danışman</span>
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/mehmet-yilmaz.svg" alt="MY" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Prof. Dr. Mehmet Yılmaz</h4>
+     <span>Danışman</span>
+   </div>
  </div>
+ <div class="kurul-title">İç Hastalıkları</div>
+ <p class="kurul-desc">Kronik hastalık yönetimi ve kanıta dayalı tedavi protokolleri.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
+ </div>
+
+ <div class="kurul-card">
+ <div class="kurul-card-header">
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/ugur-unluturk.svg" alt="UÜ" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Prof. Dr. Uğur Ünlütürk</h4>
+     <span>Danışman</span>
+   </div>
  </div>
  <div class="kurul-title">Endokrinoloji</div>
- <p class="kurul-desc">Diyabet, metabolik sendrom ve hormon bozuklukları.</p>
- <div class="kurul-affiliation">
- <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
- </div>
+ <p class="kurul-desc">Metabolik sendrom, insülin direnci, GLP-1 agonistleri ve hormonal bozukluklar.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
 
  <div class="kurul-card">
  <div class="kurul-card-header">
- <div class="kurul-avatar">AY</div>
- <div class="kurul-info">
- <h4>Doç. Dr. Ayşe Yılmaz</h4>
- <span>Danışman</span>
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/ugur-karakulak.svg" alt="UK" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Prof. Dr. Uğur Karakulak</h4>
+     <span>Danışman</span>
+   </div>
  </div>
- </div>
- <div class="kurul-title">Beslenme ve Diyetetik</div>
- <p class="kurul-desc">Klinik beslenme, obezite diyetleri ve metabolik beslenme tedavisi.</p>
- <div class="kurul-affiliation">
- <span>Hacettepe Üniversitesi Sağlık Bilimleri Fakültesi</span>
- </div>
+ <div class="kurul-title">Kardiyoloji</div>
+ <p class="kurul-desc">Kardiyovasküler risk yönetimi, hipertansiyon ve obezite-kalp sağlığı ilişkisi.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
 
  <div class="kurul-card">
  <div class="kurul-card-header">
- <div class="kurul-avatar">EK</div>
- <div class="kurul-info">
- <h4>Prof. Dr. Erhan Kaya</h4>
- <span>Danışman</span>
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/gozde-simsek.svg" alt="GŞ" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Dr. Gözde Şimşek</h4>
+     <span>Danışman</span>
+   </div>
  </div>
- </div>
- <div class="kurul-title">Genel Cerrahi / Bariatrik</div>
- <p class="kurul-desc">Bariatrik cerrahi, metabolik cerrahi ve obezite tedavisi.</p>
- <div class="kurul-affiliation">
- <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
- </div>
+ <div class="kurul-title">Tıp</div>
+ <p class="kurul-desc">Tıbbi içerik denetimi, sağlık okuryazarlığı ve hasta eğitimi.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
 
  <div class="kurul-card">
  <div class="kurul-card-header">
- <div class="kurul-avatar">SK</div>
- <div class="kurul-info">
- <h4>Doç. Dr. Selin Karaca</h4>
- <span>Danışman</span>
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/asli-alkan.svg" alt="AA" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Dr. Aslı Alkan</h4>
+     <span>Danışman</span>
+   </div>
  </div>
+ <div class="kurul-title">Tıp</div>
+ <p class="kurul-desc">Kanıta dayalı tıp, literatür takibi ve klinik doğruluk denetimi.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
- <div class="kurul-title">Psikiyatri</div>
- <p class="kurul-desc">Yeme bozuklukları, obezite psikolojisi ve davranışsal tedavi.</p>
- <div class="kurul-affiliation">
- <span>Hacettepe Üniversitesi Tıp Fakültesi</span>
+
+ <div class="kurul-card">
+ <div class="kurul-card-header">
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/erdi-ozdemir.svg" alt="EÖ" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Dr. Erdi Özdemir</h4>
+     <span>Danışman</span>
+   </div>
  </div>
+ <div class="kurul-title">Tıp</div>
+ <p class="kurul-desc">Araştırma metodolojisi, veri analizi ve kılavuz uyumu denetimi.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
+ </div>
+
+ <div class="kurul-card">
+ <div class="kurul-card-header">
+   <div class="kurul-avatar" style="border-radius: 50%; overflow: hidden; background: none;"><img src="../images/kurul/cem-coteli.svg" alt="CÇ" style="width:100%;height:100%;"></div>
+   <div class="kurul-info">
+     <h4>Doç. Dr. Cem Çöteli</h4>
+     <span>Danışman</span>
+   </div>
+ </div>
+ <div class="kurul-title">Geriatri / İç Hastalıkları</div>
+ <p class="kurul-desc">Yaşlı bireylerde obezite, sarkopenik obezite ve polifarmasi yönetimi.</p>
+ <div class="kurul-affiliation"><span>Hacettepe Üniversitesi Tıp Fakültesi</span></div>
  </div>
  </div>
 
