--- a/pages/tedavi/endoskopik-prosedurler.html
+++ b/pages/tedavi/endoskopik-prosedurler.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<script src="../scripts/https-redirect.js"></script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
@@ -41,11 +42,46 @@
  .comparison-table th { background: #f8fafc; font-weight: 600; }
  .cta-box { background: linear-gradient(135deg, var(--primary), #2a7d83); color: white; padding: 2rem; border-radius: 16px; text-align: center; margin: 3rem 0; }
  .cta-btn { display: inline-block; background: white; color: var(--primary); padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; }
+
+ /* Visual Bar Chart */
+ .visual-bar-chart { margin: 2.5rem 0; }
+ .visual-bar-chart h3 { font-size: 1.2rem; font-weight: 700; color: var(--primary); margin-bottom: 1.5rem; }
+ .vbar-row { display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem; }
+ .vbar-label { width: 120px; font-size: 0.9rem; font-weight: 600; color: #1a2e35; flex-shrink: 0; }
+ .vbar-track { flex: 1; height: 32px; background: #eef3f4; border-radius: 8px; overflow: hidden; position: relative; }
+ .vbar-fill { height: 100%; border-radius: 8px; display: flex; align-items: center; justify-content: flex-end; padding-right: 10px; font-size: 0.8rem; font-weight: 700; color: #fff; transition: width 0.8s ease; }
+ .vbar-fill.clr-esg { background: linear-gradient(90deg, #0D7377, #14919B); }
+ .vbar-fill.clr-balon { background: linear-gradient(90deg, #E8963E, #F5B06B); }
+ .vbar-fill.clr-pose { background: linear-gradient(90deg, #195157, #2a7a82); }
+ .vbar-fill.clr-sleeve { background: linear-gradient(90deg, #374151, #6B7280); }
+
+ /* Risk Indicators */
+ .risk-indicators { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 2.5rem 0; }
+ .risk-card { background: #fff; border-radius: 12px; padding: 1.25rem; border: 1px solid #e5e7eb; text-align: center; }
+ .risk-card .risk-name { font-weight: 700; font-size: 0.95rem; margin-bottom: 0.5rem; color: #1a2e35; }
+ .risk-dots { display: flex; gap: 4px; justify-content: center; margin-bottom: 0.4rem; }
+ .risk-dot { width: 14px; height: 14px; border-radius: 50%; background: #e5e7eb; }
+ .risk-dot.filled-green { background: #10b981; }
+ .risk-dot.filled-yellow { background: #f59e0b; }
+ .risk-dot.filled-red { background: #ef4444; }
+ .risk-label { font-size: 0.75rem; color: #64748b; }
+
+ /* Recovery Timeline */
+ .recovery-timeline { display: flex; align-items: flex-end; gap: 1.5rem; justify-content: center; margin: 2.5rem 0; flex-wrap: wrap; }
+ .timeline-item { text-align: center; flex: 1; min-width: 120px; }
+ .timeline-bar-wrap { height: 120px; display: flex; align-items: flex-end; justify-content: center; margin-bottom: 0.5rem; }
+ .timeline-bar { width: 48px; border-radius: 8px 8px 0 0; transition: height 0.6s ease; }
+ .timeline-bar.t-esg { background: linear-gradient(180deg, #0D7377, #14919B); }
+ .timeline-bar.t-balon { background: linear-gradient(180deg, #E8963E, #F5B06B); }
+ .timeline-bar.t-pose { background: linear-gradient(180deg, #195157, #2a7a82); }
+ .timeline-bar.t-sleeve { background: linear-gradient(180deg, #374151, #6B7280); }
+ .timeline-days { font-size: 1.1rem; font-weight: 800; color: var(--primary); }
+ .timeline-name { font-size: 0.8rem; color: #64748b; margin-top: 0.25rem; }
  
- @media (max-width: 640px) { h1 { font-size: 1.8rem; } }
+ @media (max-width: 640px) { h1 { font-size: 1.8rem; } .vbar-label { width: 80px; font-size: 0.8rem; } }
  </style>
 </head>
-<body>
+<body class="category-tedavi">
  <header class="header">
  <div class="header-inner">
  <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
@@ -163,6 +199,109 @@
  </tr>
  </tbody>
  </table>
+
+ <!-- Visual Bar Chart: Kilo Kaybı -->
+ <div class="visual-bar-chart">
+ <h3>📊 Kilo Kaybı Karşılaştırması (Toplam Vücut Ağırlığı %)</h3>
+ <div class="vbar-row">
+ <span class="vbar-label">ESG</span>
+ <div class="vbar-track"><div class="vbar-fill clr-esg" style="width:57%">%15-20</div></div>
+ </div>
+ <div class="vbar-row">
+ <span class="vbar-label">Mide Balonu</span>
+ <div class="vbar-track"><div class="vbar-fill clr-balon" style="width:42%">%10-15</div></div>
+ </div>
+ <div class="vbar-row">
+ <span class="vbar-label">POSE</span>
+ <div class="vbar-track"><div class="vbar-fill clr-pose" style="width:50%">%12-18</div></div>
+ </div>
+ <div class="vbar-row">
+ <span class="vbar-label">Cerrahi Sleeve</span>
+ <div class="vbar-track"><div class="vbar-fill clr-sleeve" style="width:83%">%25-30</div></div>
+ </div>
+ </div>
+
+ <!-- Risk Level Indicators -->
+ <h3 style="font-size:1.2rem;font-weight:700;color:var(--primary);margin:2.5rem 0 1rem;">🛡️ Risk Düzeyi Göstergeleri</h3>
+ <div class="risk-indicators">
+ <div class="risk-card">
+ <div class="risk-name">ESG</div>
+ <div class="risk-dots">
+ <span class="risk-dot filled-green"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ </div>
+ <div class="risk-label">Çok Düşük Risk</div>
+ </div>
+ <div class="risk-card">
+ <div class="risk-name">Mide Balonu</div>
+ <div class="risk-dots">
+ <span class="risk-dot filled-green"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ </div>
+ <div class="risk-label">Çok Düşük Risk</div>
+ </div>
+ <div class="risk-card">
+ <div class="risk-name">POSE</div>
+ <div class="risk-dots">
+ <span class="risk-dot filled-green"></span>
+ <span class="risk-dot filled-yellow"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ </div>
+ <div class="risk-label">Düşük Risk</div>
+ </div>
+ <div class="risk-card">
+ <div class="risk-name">Cerrahi Sleeve</div>
+ <div class="risk-dots">
+ <span class="risk-dot filled-red"></span>
+ <span class="risk-dot filled-red"></span>
+ <span class="risk-dot filled-yellow"></span>
+ <span class="risk-dot"></span>
+ <span class="risk-dot"></span>
+ </div>
+ <div class="risk-label">Orta Risk</div>
+ </div>
+ </div>
+
+ <!-- Recovery Timeline -->
+ <h3 style="font-size:1.2rem;font-weight:700;color:var(--primary);margin:2.5rem 0 1rem;">⏱️ İyileşme Süresi Karşılaştırması</h3>
+ <div class="recovery-timeline">
+ <div class="timeline-item">
+ <div class="timeline-bar-wrap">
+ <div class="timeline-bar t-balon" style="height:15%"></div>
+ </div>
+ <div class="timeline-days">1-3 gün</div>
+ <div class="timeline-name">Mide Balonu</div>
+ </div>
+ <div class="timeline-item">
+ <div class="timeline-bar-wrap">
+ <div class="timeline-bar t-pose" style="height:25%"></div>
+ </div>
+ <div class="timeline-days">2-4 gün</div>
+ <div class="timeline-name">POSE</div>
+ </div>
+ <div class="timeline-item">
+ <div class="timeline-bar-wrap">
+ <div class="timeline-bar t-esg" style="height:30%"></div>
+ </div>
+ <div class="timeline-days">3-5 gün</div>
+ <div class="timeline-name">ESG</div>
+ </div>
+ <div class="timeline-item">
+ <div class="timeline-bar-wrap">
+ <div class="timeline-bar t-sleeve" style="height:100%"></div>
+ </div>
+ <div class="timeline-days">2-4 hafta</div>
+ <div class="timeline-name">Cerrahi Sleeve</div>
+ </div>
+ </div>
 
  <h2>Kimler İçin Uygun?</h2>
  <div class="info-box">
